added introduction and model to report

--- a/Report/Boltzmann_report.tex
+++ b/Report/Boltzmann_report.tex
@@ -42,30 +42,23 @@ Delft University of Technology - Applied Physics - ICCP
 %%%  End Header
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{figure}[ht!]
-\centering
-\includegraphics[width=1.0\textwidth]{voorblad.pdf}
-\label{fig:voorblad}
-\end{figure}
+% \begin{figure}[ht!]
+% \centering
+% \includegraphics[width=1.0\textwidth]{voorblad.pdf}
+% \label{fig:voorblad}
+% \end{figure}
 \pagebreak
-
-
-
-\begin{abstract}
-\input{Abstract}
-\end{abstract}
 
 \section*{Introduction}
 \input{Introduction}
 
-\section*{Model}
+\section*{Lattice Boltzmann Model}
 \input{Model}
 
 \section*{Algorithm}
 \input{Algorithm}
 
-\section*{Simulation and Results}
-\input{Simulation}
+\section*{Results}
 \input{Results}
 
 \section*{Conclusion}
