--- a/Report/Introduction.tex
+++ b/Report/Introduction.tex
@@ -1,3 +1,3 @@
 In this short report a method is described for simulating the flow of an incompressible fluid in a horizontal two dimensional pipe. The lattice boltzmann model is used to simulate the flow characteristics. A hexagonal (d2q7) lattice is used in the model and the pipe has a constant pressure gradient, periodic boundary conditions in the direction of the flow and sticky boundaries in the perpendicular direction.
 
-As a first step and to verify the working of the model, a simple simulation is run for a pipe without any objects. After checking that the velocity profile is parabolic as expected, objects that are able to interact with the fluid are added to the pipe. In a first stage these objects are stationary and in the final stage these objects are able to move, giving the simulation a dynamic component.
+As a first step and to verify the working of the model, a simple simulation is run for a pipe without any objects. After checking that the velocity profile is parabolic as expected, objects that are able to interact with the fluid are added to the pipe. In a first stage these objects are stationary and in the final stage these objects are able to move (both translation and rotation), giving the simulation a dynamic component.
