--- a/Report/Boltzmann_report.tex
+++ b/Report/Boltzmann_report.tex
@@ -5,7 +5,7 @@
 \usepackage[english]{babel}
 \usepackage[small,bf]{caption}
 \usepackage{subcaption}
-\usepackage{graphicx,latexsym,subfig,amsmath,amssymb,amsthm,listings,pdfpages,epstopdf,alltt,enumerate}
+\usepackage{graphicx,latexsym,subfig,amsmath,amssymb,amsthm,listings,pdfpages,epstopdf,alltt,enumerate,multicol}
 \pagestyle{myheadings}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
