--- a/Report/Model.tex
+++ b/Report/Model.tex
@@ -1,5 +1,17 @@
-It is not the aim of this report to explain the lattice boltzmann model in detail, rather this section will briefly discuss its main features. Key feature of the lattice boltzmann model is that it limits the microscopic details. Particles are placed on fixed lattice sites and can only move to neighbouring sites. The particles interact in the form of collisions and a relaxation effect is introduced. Note that both space and time are treated as discrete. The `particles` however are replaced by densities of the fluid. The boltzmann equation reads:
+It is not the aim of this report to explain the lattice boltzmann model in detail, rather this section will briefly discuss its main features. Key feature of this model is that it limits the microscopic details. Particles are placed on fixed lattice sites and can only move to neighbouring sites. The particles interact in the form of collisions and a relaxation effect is introduced. Note that both space and time are treated as discrete. The `particles` however are replaced by densities of the fluid. The boltzmann equation reads:
 
 \begin{equation}
     \frac{\partial n}{\partial t} + \mathbf{v} \cdot \nabla_{\mathbf{r}} n = \left( \frac{\mathrm{d}n}{\mathrm{d}t} \right )_{collisions}
-\end{equation} 
+\end{equation}
+The left hand side describes the moving of densities and the right hand side describes the collision interaction. This effect of collision can be further written as:
+
+\begin{equation}
+    \left( \frac{\mathrm{d}n \left( \mathbf{n}, \mathbf{v}, t \right ) }{\mathrm{d}t} \right )_{collisions} = - \frac{n \left( \mathbf{n}, \mathbf{v}, t \right ) - n^{eq} \left( \mathbf{n}, \mathbf{v} \right ) }{\tau}
+\end{equation}
+where the current distribution of densities is compared with the equilibrium destribution and relaxation to this equilibrium happens with a time constant $\tau$.
+
+Combining the boltzmann model with a hexagonal lattice, comes down to defining 7 different densities for each lattic site, corresponding to each of the six velocities (in the six directions) and to the 7th zero-velocity. A time step in this model now becomes: move the densities according to their velocity and relax all the densities towards equilibrium. Finally, in equation form this becomes:
+
+\begin{equation}
+    n_i \left( \mathbf{r} + c\Delta t \mathbf{e}_i, t+ \Delta t \right) = n_i \left( \mathbf{r}, t \right ) - \frac{1}{\tau} \left[ n_i \left( \mathbf{r},t \right) - n_i^{eq} \left( \mathbf{r},t \right ) \right ]
+\end{equation}
