updated tex files, results and added voorblad

--- a/Report/Boltzmann_report.tex
+++ b/Report/Boltzmann_report.tex
@@ -5,7 +5,7 @@
 \usepackage[english]{babel}
 \usepackage[small,bf]{caption}
 \usepackage{subcaption}
-\usepackage{graphicx,latexsym,subfig,amsmath,amssymb,amsthm,listings,pdfpages,epstopdf,alltt,enumerate}
+\usepackage{graphicx,latexsym,amsmath,amssymb,amsthm,listings,pdfpages,epstopdf,alltt,enumerate,wrapfig}
 \pagestyle{myheadings}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -42,11 +42,11 @@ Delft University of Technology - Applied Physics - ICCP
 %%%  End Header
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \begin{figure}[ht!]
-% \centering
-% \includegraphics[width=1.0\textwidth]{voorblad.pdf}
-% \label{fig:voorblad}
-% \end{figure}
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=1.0\textwidth]{plots/voorblad.pdf}
+\label{fig:voorblad}
+\end{figure}
 \pagebreak
 
 \section*{Introduction}
