fixed multicol error

--- a/Report/Boltzmann_report.tex
+++ b/Report/Boltzmann_report.tex
@@ -5,7 +5,7 @@
 \usepackage[english]{babel}
 \usepackage[small,bf]{caption}
 \usepackage{subcaption}
-\usepackage{graphicx,latexsym,amsmath,amssymb,amsthm,listings,pdfpages,epstopdf,alltt,enumerate,wrapfig}
+\usepackage{multicol,graphicx,latexsym,amsmath,amssymb,amsthm,listings,pdfpages,epstopdf,alltt,enumerate,wrapfig}
 \pagestyle{myheadings}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
