--- a/Report/Results.tex
+++ b/Report/Results.tex
@@ -16,7 +16,7 @@ In Figure \ref{fig:flow2} snapshots are seen depecting various (non) moving obje
   \subfloat[Moving square placed in the laminar flow. It is placed near the middle of the flow so it hardly rotates.]{\label{fig:square}\includegraphics[width=.47\textwidth]{plots/square.pdf} }    \\
   \subfloat[Moving square placed in the laminar flow. It is placed near the edge of the flow so it rotates.]{\label{fig:rotating_square}\includegraphics[width=.47\textwidth]{plots/rotating_square.pdf}} 
   \subfloat[Moving sphere placed in the laminar flow.]{\label{fig:sphere}\includegraphics[width=.47\textwidth]{plots/sphere.pdf} }  \\
-  \subfloat[Moving triangle placed in the laminar flow.]{\label{fig:triangle}\includegraphics[width=.47\textwidth]{plots/triangle.pdf}} 
+  \subfloat[Moving triangle placed in the laminar flow. Object is moving to the left due to initial applied velocity, eventually it will follow the flow and move rightwards.]{\label{fig:triangle}\includegraphics[width=.47\textwidth]{plots/triangle.pdf}} 
   \subfloat[Moving hexagon placed in the laminar flow. The mass distribution is non uniform which influences its rotation.]{\label{fig:hexagon}\includegraphics[width=.47\textwidth]{plots/hexagon.pdf} }    
        
  \caption{Objects placed in laminar flow. The arrows give an indication of the velocity at that point, the color indicates the horizontal velocity. Low velocities correspond to orange, high velocities to blue. The red dot is the position of the centre of mass of the object. }
