corrected results and added conclusion

--- a/Report/Conclusion.tex
+++ b/Report/Conclusion.tex
@@ -1,1 +1,1 @@
-This is the conclusion.
+It can be concluded that the lattice boltzmann method used for simulating the flow of an incompressible fluid works properly. Even after introducing moving objects into the flow, the algorithm preforms good. Improvements can be made to further stabilize the fluid-object interaction and also different pipe geometries can be studied. It would be nice to also look at the behaviour of multiple objects and introduce an object-object interaction.
