added verbeteringen, alleen conclusie nog

--- a/Report/Algorithm.tex
+++ b/Report/Algorithm.tex
@@ -1,7 +1,7 @@
 The algorithm steps are as follows:
 \begin{multicols}{2}
 \begin{enumerate}
-    \item Move density $n_i$ to the approporiate neighbour
+    \item Move density $n_i$ to the appropriate neighbour
     \item Handle boundary conditions correctly (bounce-back / periodic)
     \item Calculate velocities at each point (Cartesian components)
     \item Add effect of pressure gradient
