--- a/Report/Results.tex
+++ b/Report/Results.tex
@@ -1,15 +1,15 @@
-In Figure \ref{fig:flow1} the fluid flow velocity is plotted. Parabolic behaviour is observed closer to the edges as is expected. Now let's see what happens to the flow if objects are placed in the flow.
+In Figure \ref{fig:flow1} the fluid flow velocity is plotted. Parabolic behaviour is observed closer to the edges as is expected. Now let's see what happens to the flow profile if objects are placed in the flow.
 
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=.7\textwidth]{plots/flow.pdf}
-\caption{Horizontal flow in a pipe. The arrows give an indication of the velocity at that point, the color indicates the horizontal velocity. Low velocities correspond to orange, high velocities to blue. }
+\caption{Horizontal flow in a pipe. The arrows give an indication of the velocity at that point, the colour indicates the horizontal velocity. Low velocities correspond to orange, high velocities to blue. }
 \label{fig:flow1}
 \end{figure}
 
 
 
-In Figure \ref{fig:flow2} snapshots are seen depecting various (non) moving objects in the horizontal pipe flow. The flow neatly goes around the objects. It should be noted that the objects are moving, except in Figure 2a.
+In Figure \ref{fig:flow2} snapshots are seen depicting various (non) moving objects in the horizontal pipe flow. The flow neatly goes around the objects. It should be noted that the objects are moving, except in Figure 2a.
 
 \begin{figure}[ht!] \flushleft
   \subfloat[Non-moving rectangle placed in the laminar flow.]{\includegraphics[width=.47\textwidth]{plots/rectangle.pdf}\label{fig:rectangle}} 
@@ -19,7 +19,7 @@ In Figure \ref{fig:flow2} snapshots are seen depecting various (non) moving obje
   \subfloat[Moving triangle placed in the laminar flow. Object is moving to the left due to initial applied velocity, eventually it will follow the flow and move rightwards.]{\label{fig:triangle}\includegraphics[width=.47\textwidth]{plots/triangle.pdf}} 
   \subfloat[Moving hexagon placed in the laminar flow. The mass distribution is non uniform which influences its rotation.]{\label{fig:hexagon}\includegraphics[width=.47\textwidth]{plots/hexagon.pdf} }    
        
- \caption{Objects placed in laminar flow. The arrows give an indication of the velocity at that point, the color indicates the horizontal velocity. Low velocities correspond to orange, high velocities to blue. The red dot is the position of the centre of mass of the object. }
+ \caption{Objects placed in laminar flow. The arrows give an indication of the velocity at that point, the colour indicates the horizontal velocity. Low velocities correspond to orange, high velocities to blue. The red dot is the position of the centre of mass of the object. }
 \label{fig:flow2}
 
 \end{figure}
