Final verbetering by Jonne to Conclusion, vergeet de vorige commit niet

--- a/Report/Results.tex
+++ b/Report/Results.tex
@@ -19,7 +19,7 @@ In Figure \ref{fig:flow2} snapshots are seen depicting various (non) moving obje
   \subfloat[Moving triangle placed in the laminar flow. Object is moving to the left due to initial applied velocity, eventually it will follow the flow and move rightwards.]{\label{fig:triangle}\includegraphics[width=.47\textwidth]{plots/triangle.pdf}} 
   \subfloat[Moving hexagon placed in the laminar flow. The mass distribution is non uniform which influences its rotation.]{\label{fig:hexagon}\includegraphics[width=.47\textwidth]{plots/hexagon.pdf} }    
        
- \caption{Objects placed in laminar flow. The arrows give an indication of the velocity at that point, the colour indicates the horizontal velocity. Low velocities correspond to orange, high velocities to blue. The red dot is the position of the centre of mass of the object. }
+ \caption{Objects placed in laminar flow. The arrows give an indication of the velocity at that point, the colour indicates the horizontal velocity. Low velocities correspond to orange, high velocities to blue. The red dot corresponds to the position of the centre of mass of the object. }
 \label{fig:flow2}
 
 \end{figure}
